--- a/AssetStudio/AssetStudio.csproj
+++ b/AssetStudio/AssetStudio.csproj
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{24551E2D-E9B6-4CD6-8F2A-D9F4A13E7853}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AssetStudio</RootNamespace>
     <AssemblyName>AssetStudio</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -41,6 +41,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>7.3</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -50,11 +52,19 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>C:\Users\yelpliu\Documents\trunk\tools\HlmjExtensions\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\OpenTK.dll</HintPath>
@@ -82,7 +92,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -155,7 +164,6 @@
     <Compile Include="Classes\AnimatorController.cs" />
     <Compile Include="Classes\AnimatorOverrideController.cs" />
     <Compile Include="Classes\Avatar.cs" />
-    <Compile Include="OpenFolderDialog.cs" />
     <Compile Include="StudioClasses\BinaryReaderExtensions.cs" />
     <Compile Include="StudioClasses\BinaryWriterExtensions.cs" />
     <Compile Include="StudioClasses\BuildTarget.cs" />
@@ -185,19 +193,11 @@
     <Compile Include="StudioClasses\StreamExtensions.cs" />
     <Compile Include="StudioClasses\Studio.cs" />
     <Compile Include="StudioClasses\EndianBinaryReader.cs" />
-    <Compile Include="ExportOptions.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ExportOptions.Designer.cs">
-      <DependentUpon>ExportOptions.cs</DependentUpon>
-    </Compile>
     <Compile Include="FMOD Studio API\fmod.cs" />
     <Compile Include="FMOD Studio API\fmod_dsp.cs" />
     <Compile Include="FMOD Studio API\fmod_errors.cs" />
     <Compile Include="Classes\Font.cs" />
-    <Compile Include="GOHierarchy.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="GOHierarchy.cs" />
     <Compile Include="Lz4DecoderStream.cs" />
     <Compile Include="Classes\Material.cs" />
     <Compile Include="Classes\Mesh.cs" />
@@ -213,22 +213,11 @@
     <Compile Include="Classes\TextAsset.cs" />
     <Compile Include="Classes\Texture2D.cs" />
     <Compile Include="Classes\Transform.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudioClasses\AssetsFile.cs" />
     <Compile Include="StudioClasses\ModelConverter.cs" />
     <Compile Include="StudioClasses\Texture2DConverter.cs" />
     <Compile Include="StudioClasses\WebFile.cs" />
-    <Compile Include="AssetStudioForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AssetStudioForm.Designer.cs">
-      <DependentUpon>AssetStudioForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TreeViewExtensions.cs" />
-    <EmbeddedResource Include="ExportOptions.resx">
-      <DependentUpon>ExportOptions.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -243,11 +232,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ShaderResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="AssetStudioForm.resx">
-      <DependentUpon>AssetStudioForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
